add global static dir, stock images, bgimage for home header

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% endblock css %}
 
 {% block content %}
 <!-- Header-->
-<header class="bg-dark py-5">
+<header class="py-5" id="main-header">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">The Sea Wolf</h1>
