create detail page

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="{{ item.image.url }}" alt="..." />
+                    <a href="{% url 'detail' item.slug %}"><img class="card-img-top" src="{{ item.image.url }}" alt="{{ item.name }}" /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -35,7 +35,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">See Details</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'detail' item.slug %}">See Details</a></div>
                     </div>
                 </div>
             </div>
