--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Log In</button>
-</form>
+{% load crispy_forms_tags %}
+
+{% block content %}
+<section class="py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit">Log In</button>
+        </form>
+    </div>
+</section>
+{% endblock content %}
