--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,13 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link px-4" href="{% url 'login' %}">Log In</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link px-4" href=""><b>Welcome back, {{ user.username }}!</b></a></li>
+                        <li class="nav-item"><a class="nav-link px-4" href="{% url 'logout' %}">Log Out</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link px-3" href="{% url 'login' %}">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link px-4" href="{% url 'login' %}">Sign Up</a></li>
+                    {% endif %}
                     <li class="nav-item">
                     <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
