--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,7 +7,7 @@
         <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit">Log In</button>
+            <button type="submit" class="btn btn-outline-secondary">Log In</button>
         </form>
     </div>
 </section>
