--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                         <li class="nav-item"><a class="nav-link px-4" href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link px-3" href="{% url 'login' %}">Log In</a></li>
-                        <li class="nav-item"><a class="nav-link px-4" href="{% url 'login' %}">Sign Up</a></li>
+                        <li class="nav-item"><a class="nav-link px-4" href="{% url 'signup' %}">Sign Up</a></li>
                     {% endif %}
                     <li class="nav-item">
                     <form class="d-flex">
