style navbar and home page product cards

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,9 +21,10 @@
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for item in products %}
             <div class="col mb-5">
+                <a href="{% url 'detail' item.slug %}">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <a href="{% url 'detail' item.slug %}"><img class="card-img-top" src="{{ item.image.url }}" alt="{{ item.name }}" /></a>
+                    <img class="card-img-top" src="{{ item.image.url }}" alt="{{ item.name }}" />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -33,11 +34,8 @@
                             ${{ item.price }}
                         </div>
                     </div>
-                    <!-- Product actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'detail' item.slug %}">See Details</a></div>
-                    </div>
                 </div>
+                </a>
             </div>
             {% endfor %}
         </div>
