--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,8 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#!">All Products</a></li>
                             <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="category/surfboards">Surfboards</a></li>
+                            <li><a class="dropdown-item" href="category/diving">Diving</a></li>
                         </ul>
                     </li>
                 </ul>
