--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     {% block css %}{% endblock css %}
-    <title>{% block title %}The Sea Wolf Surf Shop{% endblock title %}</title>
+    <title>{% block title %}The Sea Wolf{% endblock title %}</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -28,14 +28,14 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#!">All Products</a></li>
                             <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="category/surfboards">Surfboards</a></li>
-                            <li><a class="dropdown-item" href="category/diving">Diving</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category' 'surfboards' %}">Surfboards</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category' 'diving' %}">Diving</a></li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ms-lg-4">
                     {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link px-4" href=""><b>Welcome back, {{ user.username }}!</b></a></li>
+                        <li class="nav-item px-4 nav-link active">Welcome back, {{ user.username }}!</li>
                         <li class="nav-item"><a class="nav-link px-4" href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link px-3" href="{% url 'login' %}">Log In</a></li>
