--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,18 +1,16 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}Change Password{% endblock title %}
+
 {% block content %}
 <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
-        <h1 class="display-3">Log In</h1>
-        <br>
         <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-outline-secondary">Log In</button>
+            <button type="submit" class="btn btn-outline-secondary" value="Change my password">Change Password</button>
         </form>
-        <br>
-        <p><a class="link-primary" href="{% url 'password_reset' %}">Forgot your password?</a></p>
     </div>
 </section>
 {% endblock content %}
