--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -4,6 +4,8 @@
 {% block content %}
 <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
+        <h1 class="display-3">Create an account</h1>
+        <br>
         <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
