--- a/templates/cat.html
+++ b/templates/cat.html
@@ -8,6 +8,8 @@
 {% block content %}
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
+        <h1 class="display-3">{{category.first.category}}</h1>
+        <br>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for item in category %}
                 <div class="col mb-5">
