--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -8,6 +8,7 @@
         <br>
         <p>We've emailed you instructions for setting your password.
             You should receive the email shortly.</p>
+        <p>Be sure to check your spam folder!</p>
     </div>
 </section>
 {% endblock content %}
