--- a/templates/cart_detail.html
+++ b/templates/cart_detail.html
@@ -25,7 +25,7 @@
                         <div class="col-md-3 col-lg-3 col-xl-3">
                             {{ value.name }}
                         </div>
-                        <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                        <div class="col-md-2 col-lg-2 col-xl-1 d-flex">
                             {% if value.quantity == 1 %}
                                 <button class="btn btn-link px-2"
                                 onclick=location.href="{% url 'item_clear' value.product_id %}">
@@ -57,7 +57,10 @@
                     </div>
                 </div>
                 {% endfor %}
-                    <h4 class="text-right">Total: ${{total|floatformat:2}}</h4>
+                <div class="d-flex float-right col-12 align-items-center justify-content-end">
+                    <h4 class="float-right">Total: ${{total|floatformat:2}}</h4>
+                    <button class="btn btn-dark btn-lg ms-5" type="submit">Checkout</button>
+                </div>
             {% endif %}
         </div>
     </div>
