--- a/templates/address.html
+++ b/templates/address.html
@@ -36,14 +36,17 @@
                 {% if addresses %}
                     <h5 class="display-6 p-2">Use Saved Address</h5>
                             {% for item in addresses %}
-                            <div class="d-inline-flex p-2 bg-white rounded pe-4">{{item.address_one}} {{item.address_two}}
-                                {{item.zipcode}} {{item.city}}, {{item.state}} {{item.country}}
-                            </div>
-                            <a href="{% url 'place_order' item.id %}" class="text-decoration-none">
-                            <div class="d-inline-flex p-2"><button class="btn btn-success btn-sm">Use</button></div>
-                            </a>
-                            <br>
-                    {% endfor %}
+                                {% if not item.hidden %}
+                                    <div class="d-inline-flex p-2 bg-white rounded pe-4">{{item.address_one}} {{item.address_two}}
+                                        {{item.zipcode}} {{item.city}}, {{item.state}} {{item.country}}
+                                    </div>
+                                    <a href="{% url 'place_order' item.id %}" class="text-decoration-none">
+                                    <div class="d-inline-flex p-2">
+                                        <button class="btn btn-success btn-sm">Use</button>
+                                    </div></a>
+                                    <br>
+                                {% endif %}
+                            {% endfor %}
                 {% endif %}
             <h4 class="display-6 mt-4">Enter New Postal Address</h4>
             <form action="" method="POST"><br>
