create about page and add note onto signup form

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,7 +4,7 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="row gx-4 gx-lg-5 align-items-center">
-            <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{ object.image.url }}" alt="..." /></div>
+            <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{ object.image.url }}" alt="{{ object.name }}" /></div>
             <div class="col-md-6">
                 <div class="small mb-1"></div>
                 <h1 class="display-5 fw-bolder">{{ object.name }}</h1>
@@ -13,7 +13,6 @@
                 </div>
                 <p class="lead">{{ object.description }}</p>
                 <div class="d-flex">
-                    <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
                     <a href="{% url 'cart_add' object.id %}">
                         <button class="btn btn-outline-dark flex-shrink-0" type="button">
                             <i class="bi-cart-fill me-1"></i>
