--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -4,7 +4,8 @@
 {% block content %}
 <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
-        <h1 class="display-3">Create an account</h1>
+        <h1 class="display-3 mb-3">Create an account</h1>
+        <p>Note: Please enter Date of Birth in YYYY-MM-DD format, ex. 2020-12-03</p>
         <br>
         <form method="POST">
             {% csrf_token %}
