--- a/templates/about.html
+++ b/templates/about.html
@@ -17,12 +17,11 @@ About The Sea Wolf
             <p>
                 Our goal has always been to share our passion for the ocean and all of the thrilling activities associated with it. 
                 That's why we offer an extensive selection of surfboards, wetsuits, fins, masks, snorkels, tanks, and 
-                everything else you need to make the most of your aquatic adventures in Hawaii. Our knowledgeable staff 
-                is always eager to offer expert advice and recommendations, so don't hesitate to ask us anything. 
+                everything else you need to make the most of your aquatic adventures, wherever you are.
             </p>
             <p>
                 We're proud to be a locally-owned and operated establishment, and we strive to embody the spirit of "aloha" 
-                in everything we do. Come visit us today and experience the true essence of surfing and diving culture!
+                in everything we do. Order from us today and experience the true essence of surfing and diving culture!
             </p>
             <figure class="figure">
                 <img src="{% static 'images/shack1.jpg' %}" class="figure-img img-fluid" alt="A small shack by the beach in Hawaii">
