--- a/templates/cat.html
+++ b/templates/cat.html
@@ -5,10 +5,25 @@
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
 {% endblock css %}
 
+{% block title %}
+{{category.first.category}}
+{% endblock title %}
+
 {% block content %}
-<section class="py-5">
+<!-- Header -->
+{% if  category.first.category.name == 'Surfboards' %}
+<header class="py-5" id="surfing-header">
+{% elif category.first.category.name == 'Diving' %}
+<header class="py-5" id="diving-header">
+{% endif %}
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-dark">
+            <h1 class="display-2 fw-bolder">{{category.first.category}}</h1>
+        </div>
+    </div>
+</header>
+<section class="pb-5">
     <div class="container px-4 px-lg-5 mt-5">
-        <h1 class="display-3">{{category.first.category}}</h1>
         <br>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for item in category %}
