--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <!-- Header-->
-<header class="py-5" id="main-header">
+<header class="py-5" class="site-header" id="main-header">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">The Sea Wolf</h1>
