--- a/templates/cart_detail.html
+++ b/templates/cart_detail.html
@@ -68,6 +68,11 @@
                         <button class="btn btn-dark btn-lg ms-5" type="button">Checkout</button>
                     </a>
                 </div>
+                
+            <div class="pb-5 mb-5"></div>
+            <div class="pb-5 mb-5"></div>
+            <div class="pb-5 mb-5"></div>
+            <div class="pb-3 mb-5"></div>
             {% endif %}
         </div>
     </div>
