--- a/templates/order_success.html
+++ b/templates/order_success.html
@@ -3,8 +3,9 @@
 {% block content %}
 <section class="h-100" style="background-color: #eee;">
     <div class="container h-100 py-5">
-        <h3 class="display-3">Great Success!</h3>
-        <p>Check yo email</p>
+        <h3 class="display-3 mx-4">Thank you for your purchase!</h3>
+        <p>You will receive an email with your order details.</p>
+        <p><a href="{% url 'home' %}" class="link-info">Continue Shopping</a></p>
     </div>
 </section>
 {% endblock content %}
