--- a/static/css/home.css
+++ b/static/css/home.css
@@ -16,13 +16,19 @@
     background-position: center;
     background-image: url("../images/diving2.jpg");
 }
+#success-header {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: url("../images/diving1.jpg");
+}
 
 .mb-5 a {
     text-decoration: none;
     color: inherit;
 }
 
-.h-100:hover {
+.product_card:hover {
     transform: scale(1.05);
     border: 0px;
 }
