--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
             {% for item in products %}
             <div class="col mb-5">
                 <a href="{% url 'detail' item.slug %}">
-                <div class="card h-100">
+                <div class="card h-100 product_card">
                     <!-- Product image-->
                     <img class="card-img-top" src="{{ item.image.url }}" alt="{{ item.name }}" />
                     <!-- Product details-->
