--- a/templates/about.html
+++ b/templates/about.html
@@ -6,9 +6,9 @@ About The Sea Wolf
 {% endblock title %}
 
 {% block content %}
-<section class="h-100" style="background-color: #eee;">
+<section class="h-100" style="background-color: #eee;" id="body-section">
     <div class="container h-100 py-5">
-        <div class="col-xl-10 col-xs-12 mx-auto">
+        <div class="col-xl-10 col-xs-12 mx-auto mb-5">
             <h4 class="display-4 mb-5">About Us</h4>
             <p>
                 <b>Aloha and welcome to your new favorite Hawaiian Surfing and Diving store!</b> We have been providing top-quality 
@@ -23,11 +23,11 @@ About The Sea Wolf
                 We're proud to be a locally-owned and operated establishment, and we strive to embody the spirit of "aloha" 
                 in everything we do. Order from us today and experience the true essence of surfing and diving culture!
             </p>
-            <figure class="figure">
+            <figure class="figure h-100">
                 <img src="{% static 'images/shack1.jpg' %}" class="figure-img img-fluid" alt="A small shack by the beach in Hawaii">
                 <figcaption class="figure-caption">Our first store back in 2011</figcaption>
             </figure>
         </div>
     </div>
-</section> 
+</section>
 {% endblock content %}
