--- a/templates/signup_success.html
+++ b/templates/signup_success.html
@@ -10,16 +10,13 @@
             </div>
         </div>
     </header>
-<section class="h-100" style="background-color: #eee;">
+<section class="h-100"  id="body-section">
     <div class="container h-100 pt-4 pb-5">
         <h3 class="display-4 mb-5">Welcome to the Sea Wolf family!</h3>
         <p>Thank you for creating an account with us.</p>
         <p>Proceed to the <a href="{% url 'login' %}" class="link-primary">Log In page</a> and enter your username and password.</p>
     
     
-    <div class="pb-5 mb-5"></div>
-    <div class="pb-5 mb-5"></div>
-    <div class="pb-5 mb-3"></div>
     </div>
 </section>
 {% endblock content %}
