--- a/templates/address.html
+++ b/templates/address.html
@@ -2,6 +2,8 @@
 {% load crispy_forms_tags %}
 {% load cart_tag %}
 
+{% block title %}Select an Address{% endblock title %}
+
 {% block content %}
 <section class="h-100" style="background-color: #eee;">
     <div class="container h-100 py-5">
