--- a/templates/order_success.html
+++ b/templates/order_success.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
+{% block title %}Order Placed{% endblock title %}
+
 {% block content %}
-<section class="h-100" style="background-color: #eee;">
+<section class="h-100" style="background-color: #eee;" id="body-section">
     <div class="container h-100 py-5">
-        <h3 class="display-3 mx-4">Thank you for your purchase!</h3>
+        <h3 class="display-3 mx-4 mb-4">Thank you for your purchase!</h3>
         <p>You will receive an email with your order details.</p>
         <p><a href="{% url 'home' %}" class="link-info">Continue Shopping</a></p>
     </div>
