--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% load cart_tag %}
 
+{% block title %}Review Order{% endblock title %}
+
 {% block content %}
-<section class="h-100" style="background-color: #eee;">
+<section class="h-100" style="background-color: #eee;" id="body-section">
     <div class="container h-100 py-5">
         <h5 class="display-5 mb-5">Review Order Details</h5>
         <h5>Items</h5>
