--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,300&family=Roboto&family=Source+Sans+Pro&family=Ubuntu&display=swap');
 body, html {
     font-family: 'Source Sans Pro', sans-serif;
+    background-color: #eee;
 }
 p {
     font-size: 1.1rem;
