--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 <!-- Product section-->
 {% block content %}
-<section class="py-5">
+<section class="py-5" style="background-color: white;">
     <div class="container px-4 px-lg-5 my-5">
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{ object.image.url }}" alt="{{ object.name }}" /></div>
