add new mask and snorkel products to db, add new categories

--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@ About The Sea Wolf
             </p>
             <p>
                 Our goal has always been to share our passion for the ocean and all of the thrilling activities associated with it. 
-                That's why we offer an extensive selection of surfboards, wetsuits, fins, masks, snorkels, tanks, and 
+                That's why we offer an extensive selection of surfboards, fins, masks, snorkels, and 
                 everything else you need to make the most of your aquatic adventures, wherever you are.
             </p>
             <p>
