--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,9 @@
                             <li><a class="dropdown-item" href="#!">All Products</a></li>
                             <li><hr class="dropdown-divider" /></li>
                             <li><a class="dropdown-item" href="{% url 'category' 'surfboards' %}">Surfboards</a></li>
-                            <li><a class="dropdown-item" href="{% url 'category' 'diving' %}">Diving</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category' 'Snorkels' %}">Snorkels</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category' 'Fins' %}">Fins</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category' 'Masks' %}">Masks</a></li>
                         </ul>
                     </li>
                 </ul>
