--- a/templates/home.html
+++ b/templates/home.html
@@ -16,8 +16,9 @@
     </div>
 </header>
 <!-- Section-->
-<section class="py-5">
+<section class="pb-5 pt-3">
     <div class="container px-4 px-lg-5 mt-5">
+        <h5 class="display-5">Featured Products</h5>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for item in products %}
             <div class="col mb-5">
