--- a/templates/home.html
+++ b/templates/home.html
@@ -17,8 +17,15 @@
 </header>
 <!-- Section-->
 <section class="pb-5 pt-3">
-    <div class="container px-4 px-lg-5 mt-5">
-        <h5 class="display-5">Featured Products</h5>
+    <div class="container px-4 px-lg-5 mt-3">
+        <div class="col-11 d-flex align-items-center">
+            <div class="col-8">
+            <h5 class="display-6">Featured Products</h5> 
+            </div>
+            <div class="col-6">
+            <a class="px-2 link-dark" href="{% url 'category' 'surfboards' %}">Surfboards</a> <a class="px-2 link-dark" href="{% url 'category' 'snorkels' %}">Snorkels</a> <a class="px-2 link-dark" href="{% url 'category' 'fins' %}">Fins</a> <a class="px-2 link-dark" href="{% url 'category' 'masks' %}">Masks</a>
+            </div>
+        </div>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for item in products %}
             <div class="col mb-5">
