--- a/templates/base.html
+++ b/templates/base.html
@@ -43,16 +43,16 @@
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ms-lg-4">
                     {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link px-4" href="{% url 'account_profile' %}">{{ user.username }}'s Account</a></li>
-                        <li class="nav-item"><a class="nav-link px-4" href="{% url 'logout' %}">Log Out</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'account_profile' %}">{{ user.username }}'s Account</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
-                        <li class="nav-item"><a class="nav-link px-3" href="{% url 'login' %}">Log In</a></li>
-                        <li class="nav-item"><a class="nav-link px-4" href="{% url 'signup' %}">Sign Up</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
                     {% endif %}
                     <li class="nav-item">
                     <form class="d-flex">
                         <a href="{% url 'cart_detail' %}">
-                            <button class="btn btn-outline-light" type="button" onclick=location.href='{% url 'cart_detail' %}'>
+                            <button class="btn btn-outline-light ms-lg-1" type="button" onclick=location.href='{% url 'cart_detail' %}'>
                                 <i class="bi-cart-fill me-1"></i>
                                 Cart
                                 <span class="badge bg-dark text-white ms-1 rounded-pill"> {{request.session.cart|length}}</span>
