--- a/templates/cat.html
+++ b/templates/cat.html
@@ -12,7 +12,7 @@
 {% block content %}
 <!-- Header -->
 {% if  category.first.category.name == 'Surfboards' %}
-<header class="py-5" id="surfing-header">
+<header class="py-5" id="surfing-header" style="color: white;">
 {% elif category.first.category.name == 'Snorkels' %}
 <header class="py-5" id="snorkel-header">
 {% elif category.first.category.name == 'Fins' %}
@@ -27,7 +27,7 @@
     </div>
 </header>
 <section class="pb-5">
-    <div class="container px-4 px-lg-5 mt-5">
+    <div class="container px-4 px-lg-5 mt-2">
         <br>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for item in category %}
