improve mobile styling on home page, add header to password reset form, add photo to order success page

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,12 +17,12 @@
 </header>
 <!-- Section-->
 <section class="pb-5 pt-3">
-    <div class="container px-4 px-lg-5 mt-3">
-        <div class="col-11 d-flex align-items-center">
-            <div class="col-8">
+    <div class="container px-4 px-lg-5">
+        <div class="col-11 d-flex align-items-center mb-1">
+            <div class="col-7">
             <h5 class="display-6">Featured Products</h5> 
             </div>
-            <div class="col-6">
+            <div class="col-6 text-center">
             <a class="px-2 link-dark" href="{% url 'category' 'surfboards' %}">Surfboards</a> <a class="px-2 link-dark" href="{% url 'category' 'snorkels' %}">Snorkels</a> <a class="px-2 link-dark" href="{% url 'category' 'fins' %}">Fins</a> <a class="px-2 link-dark" href="{% url 'category' 'masks' %}">Masks</a>
             </div>
         </div>
