--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,7 +5,8 @@
 
 {% block content %}
 <section class="py-5">
-    <div class="container px-4 px-lg-5 my-5">
+    <div class="container px-4 px-lg-5 mb-5 mt-3">
+        <h5 class="display-6 mb-5">Please enter your account's email address</h5>
         <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
