--- a/templates/detail.html
+++ b/templates/detail.html
@@ -20,6 +20,11 @@
                         </button>
                     </a>
                 </div>
+                {% if user.is_authenticated %}
+                    {% if has_bought %}
+                        <p class="mt-2">You bought this item on {{ bought_date }}.</p>
+                    {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
@@ -28,25 +33,9 @@
 <section class="py-5 bg-light">
     <div class="container px-4 px-lg-5 mt-5">
         <h2 class="fw-bolder mb-4">Related products</h2>
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-4 row-cols-xl-4 justify-content-center">
             {% for item in related %}
-            <div class="col mb-5">
-                <a href="{% url 'detail' item.slug %}">
-                    <div class="card h-100 product_card">
-                        <!-- Product image-->
-                        <img class="card-img-top" src="{{ item.image.url }}" alt="{{ item.name }}" />
-                        <!-- Product details-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">{{ item.name }}</h5>
-                                <!-- Product price-->
-                                ${{ item.price }}
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
+                    {% include "includes/product_card.html" with item=item %}
             {% endfor %}
         </div>
     </div>
