--- a/templates/home.html
+++ b/templates/home.html
@@ -28,23 +28,7 @@
         </div>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for item in products %}
-            <div class="col mb-5">
-                <a href="{% url 'detail' item.slug %}">
-                <div class="card h-100 product_card">
-                    <!-- Product image-->
-                    <img class="card-img-top" src="{{ item.image.url }}" alt="{{ item.name }}" />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">{{ item.name }}</h5>
-                            <!-- Product price-->
-                            ${{ item.price }}
-                        </div>
-                    </div>
-                </div>
-                </a>
-            </div>
+                {% include "includes/product_card.html" with item=item %}
             {% endfor %}
         </div>
     </div>
