reduce margin size between product and related items sections

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 <!-- Product section-->
 {% block content %}
-<section class="py-5" style="background-color: white;">
+<section class="pt-5" style="background-color: white;">
     <div class="container px-4 px-lg-5 my-5">
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{ object.image.url }}" alt="{{ object.name }}" /></div>
@@ -30,7 +30,7 @@
     </div>
 </section>
 <!-- Related items section-->
-<section class="py-5 bg-light">
+<section class="pb-5 bg-light">
     <div class="container px-4 px-lg-5 mt-5">
         <h2 class="fw-bolder mb-4">Related products</h2>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-4 row-cols-xl-4 justify-content-center">
